[package]
name = "indexer-tx-watcher-example"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
itertools = "0.14.0"
tokio = { version = "1.47.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

near-lake-framework = "0.7.13"
